# auto-patchelf

./: .gitignore  default.nix  flake.nix  main.py  pyproject.toml  shell.nix
src/auto_patchelf/: __main__.py
